# pico-lab

./: README.md  README_cn.md
demo/: blink.uf2  hello_serial.uf2  hello_serial_io01.uf2  pico_ws2812.uf2
demo/breakout_board/: pio_ws2812.uf2
firmware/: DAP_config.h  README.md
software/: CMakeLists.txt
software/hello_serial/: CMakeLists.txt
software/infones/: CMakeLists.txt  ili9341_lcd.pio  main.c
software/infones/infones/: InfoNES.c  InfoNES.h  InfoNES_Mapper.c  InfoNES_System.c  InfoNES_Types.h  InfoNES_pAPU.c  K6502.c  K6502_rw.h
software/infones/infones/mapper/: InfoNES_Mapper_001.cpp  InfoNES_Mapper_005.cpp  InfoNES_Mapper_006.cpp  InfoNES_Mapper_019.cpp  InfoNES_Mapper_085.cpp  InfoNES_Mapper_188.cpp
software/ws2812/: CMakeLists.txt  ws2812.c
tools/: attach.sh  dap_attach.sh  dap_flash_dump.sh  dap_flash_write.sh  dap_reset.sh  dfw  dreset  env.sh  flash_dump.sh  pfw  preset  reset.sh  rfw  rpi_attach.sh  rpi_flash_dump.sh  rpi_flash_write.sh  rpi_reset.sh  rreset
